@@ -6,10 +6,13 @@ import java.util.List;
 public class ReaderService {
 
     public List<String> readCommand() {
-        String input = System.console().readLine();
-        if (input == null) {
-            return List.of();
+        if (scanner.hasNextLine()) {
+            String input = scanner.nextLine();
+            if (input == null || input.trim().isEmpty()) {
+                return List.of();
+            }
+            return Arrays.asList(input.trim().split("\\s+"));
         }
-        return Arrays.asList(input.trim().split(" "));
+        return List.of();
     }
 }
